컨텐츠를 헤더와 왼쪽 정렬 맞춤

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -19,6 +19,8 @@ a{
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;700&display=swap%27');
 
 .container {
+  box-sizing: border-box;
   width: 900px;
   margin: 0px auto;
+  padding-left: 27px;
 }
